--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,5 +4,28 @@ nav{
 }
 
 main{
-    margin-top: 18vh;
+    margin-top: 25vh;
+    gap: 30px;
+}
+
+.down{
+    height: 240px;
+}
+
+@keyframes slideDown {
+    
+    from{
+        transform: translate(0px, -20px);
+    } to {
+        transform: translate(0px, 45px);
+    }
+    
+}
+
+.stairs{
+    height: 240px;
+    animation-name: slideDown;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    transform: translate(0px, 45px);
 }
