--- a/resources/views/temporaneo.html
+++ b/resources/views/temporaneo.html
@@ -16,11 +16,13 @@
         <h4>Contact</h4>
     </nav>
 
-    <main class="d-flex vh-100">
-        <img src="/public/media/down.jpg" alt="logo" class="">
-        <img src="/public/media/stairs.jpg" alt="logo">
+    <main class="d-flex vh-100 justify-content-center">
+        <img src="/public/media/down.jpg" alt="logo" class="down">
+        <img src="/public/media/stairs.jpg" alt="logo" class="stairs">
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <!-- js -->
+    <script src="/public/js/script.js"></script>
   </body>
 </html>
