--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@ nav{
     gap: 30px;
 }
 
+.nav-link:hover{
+    color: blue;
+}
+
 main{
     margin-top: 25vh;
     gap: 30px;
@@ -104,6 +108,7 @@ main{
      padding-left: 100%;
      animation: scorrimento2 25s linear infinite;
      white-space: nowrap;
+     padding: 0;
     }
 
     #text {
@@ -114,6 +119,8 @@ main{
    font-size: 180px;
    font-weight: bold;
    color: black;
+   margin-top: -80px;
+   padding: 0;
   }
 
 
@@ -186,4 +193,14 @@ main{
     bottom: 40px;
     right: 40px;
     width: 25px;
+   }
+
+   .seemore{
+    text-decoration: underline;
+    height: fit-content;
+    color: black;
+   }
+
+   .seemore:hover{
+    color: blue;
    }
